test/files/neg/dynamic-unqualified-call.scala
class DynamicClass extends Dynamic {
  def applyDynamic(m: String)() = ()
  nonExistingMethod()
}
