test/files/neg/dynamic-unqualified-call.check
dynamic-unqualified-call.scala:3: error: not found: value nonExistingMethod
  nonExistingMethod()
  ^
one error found
dynamic-unqualified-call.scala:3: error: not found: value nonExistingMethod
  nonExistingMethod()
  ^
one error found
dynamic-unqualified-call.scala:3: error: not found: value nonExistingMethod
  nonExistingMethod()
  ^
one error found
